inserido pedidos zap sem bitly

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a href="#book-a-table" class="book-a-table-btn scrollto d-none d-lg-flex">Reserve uma mesa</a>
+      <a href="#book-a-table" class="book-a-table-btn scrollto d-none d-lg-flex">Reservas</a>
 
     </div>
   </header><!-- End Header -->
@@ -104,12 +104,13 @@
     <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col-lg-8">
-          <h1>Bem Vindos(as) à<span>Pizza Di Maria</span></h1>
+          <h1>Bem Vindos(as) à <br><span>Pizza Di Maria</span></h1>
           <h2>Delivering great food for more than 18 years!</h2>
 
           <div class="btns">
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Nosso Cardápio</a>
-            <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Reserve uma mesa</a>
+            <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Reservas</a>
+            <a href="https://api.whatsapp.com/send?phone=5516988763452&text=Quero%20uma%20pizza" class="btn-book animated fadeInUp scrollto">Pedidos</a>
           </div>
         </div>
         <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
