--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col-lg-8">
-          <h1>Bem Vindos(as) à <br><span>Pizza Di Maria</span></h1>
-          <h2>Delivering great food for more than 18 years!</h2>
+          <h1>Bem Vindos(as) à <br><span>Pizzas Di Maria</span></h1>
+          <h2>Pizzas com qualidade feitas com carinho!</h2>
 
           <div class="btns">
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Nosso Cardápio</a>
