--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
             <a href="https://api.whatsapp.com/send?phone=5519971542369&text=Quero%20uma%20pizza" class="btn-book animated fadeInUp scrollto">Pedidos</a>
           </div>
         </div>
-        <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
-          <a href="https://www.youtube.com/watch?v=GlrxcuEDyF8" class="glightbox play-btn"></a>
-        </div>
+         <!-- If you would like to customize the button, remove or change the "class" attribute inside the <span> tag -->
+<span class="glf-button" data-glf-cuid="f6676779-ac93-45b2-b73b-fa81ea14b9f2" data-glf-ruid="8eca8d23-b328-461e-8c27-27a402907838" > Peça Agora!</span>
+<span class="glf-button reservation" data-glf-cuid="f6676779-ac93-45b2-b73b-fa81ea14b9f2" data-glf-ruid="8eca8d23-b328-461e-8c27-27a402907838" data-glf-reservation="true" > Reserva de mesas</span>
+<script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async ></script> 
 
       </div>
     </div>
