mudancas no pedido e reserva

--- a/index.html
+++ b/index.html
@@ -43,16 +43,11 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
 
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-phone d-flex align-items-center"><span>+1 5589 55488 55</span></i>
-        <i class="bi bi-clock d-flex align-items-center ms-4"><span> Mon-Sat: 11AM - 23PM</span></i>
+        <i class="bi bi-phone d-flex align-items-center"><span>19 971542369</span></i>
+        <i class="bi bi-clock d-flex align-items-center ms-4"><span> Quinta-Terça: 17PM - 23PM</span></i>
       </div>
 
-      <div class="languages d-none d-md-flex align-items-center">
-        <ul>
-          <li>En</li>
-          <li><a href="#">De</a></li>
-        </ul>
-      </div>
+    
     </div>
   </div>
 
@@ -72,23 +67,7 @@
           <li><a class="nav-link scrollto" href="#specials">Specials</a></li>
           <li><a class="nav-link scrollto" href="#events">Eventos</a></li>
           <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>
-          <li><a class="nav-link scrollto" href="#gallery">Galleria</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 44</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
+          <li><a class="nav-link scrollto" href="#gallery">Galleria</a></li>    
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
         </ul>
@@ -115,7 +94,8 @@
         </div>
          <!-- If you would like to customize the button, remove or change the "class" attribute inside the <span> tag -->
 <span class="glf-button" data-glf-cuid="f6676779-ac93-45b2-b73b-fa81ea14b9f2" data-glf-ruid="8eca8d23-b328-461e-8c27-27a402907838" > Peça Agora!</span>
-<span class="glf-button reservation" data-glf-cuid="f6676779-ac93-45b2-b73b-fa81ea14b9f2" data-glf-ruid="8eca8d23-b328-461e-8c27-27a402907838" data-glf-reservation="true" > Reserva de mesas</span>
+<span class="glf-button reservation"  data-glf-reservation="true" > Reserva de mesas</span>
+<a href="https://api.whatsapp.com/send?phone=5519971542369&text=Quero%20uma%20pizza" class="glf-button">Peça pelo WhatsApp</a>
 <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async ></script> 
 
       </div>
@@ -128,16 +108,16 @@
 
       <div class="section-title">
         <h2>Menu</h2>
-        <p>Check Our Tasty Menu</p>
+        <p>Veja o nosso cardápio</p>
       </div>
 
       <div class="row" data-aos="fade-up" data-aos-delay="100">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="menu-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-starters">Starters</li>
-            <li data-filter=".filter-salads">Salads</li>
-            <li data-filter=".filter-specialty">Specialty</li>
+            <li data-filter="*" class="filter-active">Todas</li>
+            <li data-filter=".filter-starters">Pizzas</li>
+            <li data-filter=".filter-salads">Variados</li>
+            <li data-filter=".filter-specialty">Bebidas</li>
           </ul>
         </div>
       </div>
@@ -235,10 +215,10 @@
         </div>
 
       </div>
-
+      
     </div>
   </section><!-- End Menu Section -->
-
+ 
   <main id="main">
 
     <!-- ======= About Section ======= -->
