remocao de botao delivery gloria

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
         </div>
          <!-- If you would like to customize the button, remove or change the "class" attribute inside the <span> tag -->
-<span class="glf-button" data-glf-cuid="f6676779-ac93-45b2-b73b-fa81ea14b9f2" data-glf-ruid="8eca8d23-b328-461e-8c27-27a402907838" > Peça Agora!</span>
+<!-- <span class="glf-button" data-glf-cuid="f6676779-ac93-45b2-b73b-fa81ea14b9f2" data-glf-ruid="8eca8d23-b328-461e-8c27-27a402907838" > Peça Agora!</span> -->
 <a href="tel:19971542369" class="glf-button reservation"  data-glf-reservation="true" > Peça pelo telefone</span>
 <a href="https://api.whatsapp.com/send?phone=5519971542369&text=Quero%20uma%20pizza" class="glf-button">Peça pelo WhatsApp</a>
 
@@ -226,7 +226,7 @@
    <!-- ======= Botões de Pedido ======= -->  
     </div>
      <!-- If you would like to customize the button, remove or change the "class" attribute inside the <span> tag -->
-    <span class="glf-button" data-glf-cuid="f6676779-ac93-45b2-b73b-fa81ea14b9f2" data-glf-ruid="8eca8d23-b328-461e-8c27-27a402907838" > Peça Agora!</span>
+    <!-- <span class="glf-button" data-glf-cuid="f6676779-ac93-45b2-b73b-fa81ea14b9f2" data-glf-ruid="8eca8d23-b328-461e-8c27-27a402907838" > Peça Agora!</span> -->
     <a href="tel:19971542369" class="glf-button reservation"  data-glf-reservation="true" > Peça pelo telefone</span>
     <a href="https://api.whatsapp.com/send?phone=5519971542369&text=Quero%20uma%20pizza" class="glf-button">Peça pelo WhatsApp</a>
     
