--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="menu-flters">
             <li data-filter="*" class="filter-active">Todas</li>
-            <li data-filter=".filter-starters">Pizzas</li>
-            <li data-filter=".filter-salads">Variados</li>
-            <li data-filter=".filter-specialty">Bebidas</li>
+            <li data-filter=".filter-bacon">Bacon</li>
+            <li data-filter=".filter-calabresa">Calabresa</li>
+            <li data-filter=".filter-frango">Frango</li>
           </ul>
         </div>
       </div>
 
       <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
-        <div class="col-lg-6 menu-item filter-starters">
+        <div class="col-lg-6 menu-item filter-bacon">
           <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
           <div class="menu-content">
             <a href="#">Lobster Bisque</a><span>$5.95</span>
@@ -134,7 +134,7 @@
           </div>
         </div>
 
-        <div class="col-lg-6 menu-item filter-specialty">
+        <div class="col-lg-6 menu-item filter-bacon">
           <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
           <div class="menu-content">
             <a href="#">Bread Barrel</a><span>$6.95</span>
@@ -144,7 +144,7 @@
           </div>
         </div>
 
-        <div class="col-lg-6 menu-item filter-starters">
+        <div class="col-lg-6 menu-item filter-bacon">
           <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
           <div class="menu-content">
             <a href="#">Crab Cake</a><span>$7.95</span>
