--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 
           <div class="btns">
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Nosso Cardápio</a>
-            <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Reservas</a>
-            <a href="https://api.whatsapp.com/send?phone=5519971542369&text=Quero%20uma%20pizza" class="btn-book animated fadeInUp scrollto">Pedidos</a>
+            <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Telefone</a>
+            <a href="https://api.whatsapp.com/send?phone=5519971542369&text=Quero%20uma%20pizza" class="btn-book animated fadeInUp scrollto">Peça pelo WhatsApp</a>
           </div>
         </div>
          <!-- If you would like to customize the button, remove or change the "class" attribute inside the <span> tag -->
 <!-- <span class="glf-button" data-glf-cuid="f6676779-ac93-45b2-b73b-fa81ea14b9f2" data-glf-ruid="8eca8d23-b328-461e-8c27-27a402907838" > Peça Agora!</span> -->
-<a href="tel:19971542369" class="glf-button reservation"  data-glf-reservation="true" > Peça pelo telefone</span>
-<a href="https://api.whatsapp.com/send?phone=5519971542369&text=Quero%20uma%20pizza" class="glf-button">Peça pelo WhatsApp</a>
+<!-- <a href="tel:19971542369" class="glf-button reservation"  data-glf-reservation="true" > Peça pelo telefone</a>
+<a href="https://api.whatsapp.com/send?phone=5519971542369&text=Quero%20uma%20pizza" class="glf-button">Peça pelo WhatsApp</a> -->
 
 
       </div>
@@ -154,7 +154,7 @@
           </div>
         </div>
 
-        <div class="col-lg-6 menu-item filter-salads">
+        <div class="col-lg-6 menu-item filter-bacon">
           <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
           <div class="menu-content">
             <a href="#">Caesar Selections</a><span>$8.95</span>
