--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <h1 class="logo me-auto me-lg-0"><a href="index.html">Pizzas Di Maria</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -83,6 +83,8 @@
     <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col-lg-8">
+          <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+
           <h1>Bem Vindos(as) à <br><span>Pizzas Di Maria</span></h1>
           <h2>Pizzas com qualidade feitas com carinho!</h2>
 
