--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
   
   
-    <div class="container menu section-bg p-5 bg-black rounded shadow mb-5"     data-aos="fade-up"    >
+    <div class="container menu section-bg p-5 bg-black rounded shadow mb-5" data-aos="fade-up"    >
       <!-- Rounded tabs -->
       <ul id="myTab" role="tablist" class="nav nav-tabs flex-sm-row text-center border-0 rounded-nav">
         <li class="nav-item flex-sm-fill">
@@ -158,40 +158,40 @@
 		  <div class="col-lg-6 menu-item filter-salads">
           <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
           <div class="menu-content">
-            <a href="#">Lobster Bisque</a><span>$5.95</span>
+            <a>SICILIANA</a><span>R$37,00</span>
           </div>
           <div class="menu-ingredients">
-            Lorem, deren, trataro, filede, nerada
+            mussarela ou catupiry, champignon, bacon     
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-specialty">
           <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
           <div class="menu-content">
-            <a href="#">Bread Barrel</a><span>$6.95</span>
+            <a>LOMBO COM BACON</a><span>R$37,00</span>
           </div>
           <div class="menu-ingredients">
-            Lorem, deren, trataro, filede, nerada
+            mussarela ou catupiry, lombo e bacon
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-starters">
           <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
           <div class="menu-content">
-            <a href="#">Crab Cake</a><span>$7.95</span>
+            <a>PRESUNTO E BACON</a><span>R$37,00</span>
           </div>
           <div class="menu-ingredients">
-            A delicate crab cake served on a toasted roll with lettuce and tartar sauce
+            mussarela ou catupiry, presunto e bacon
           </div>
         </div>
 
         <div class="col-lg-6 menu-item filter-salads">
           <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
           <div class="menu-content">
-            <a href="#">Caesar Selections</a><span>$8.95</span>
+            <a>AMERICANA</a><span>R$41,00</span>
           </div>
           <div class="menu-ingredients">
-            Lorem, deren, trataro, filede, nerada
+            mussarela, presunto, ovos cozidos e bacon fatiado
           </div>
         </div>
 
@@ -205,7 +205,7 @@
 
 
         
-        <div id="calabresa" role="tabpanel" aria-labelledby="calabresa-tab" class="tab-pane fade px-4 py-5">
+        <div id="calabresa" role="tabpanel" aria-labelledby="calabresa-tab" class="tab-pane fade px-1 py-3">
           <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-6 menu-item filter-starters">
