--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
           <li><a class="nav-link scrollto active" href="#hero">Início</a></li>
           <li><a class="nav-link scrollto" href="#about">Sobre</a></li>
           <li><a class="nav-link scrollto" href="#menu">Cardápio</a></li>
-          <li><a class="nav-link scrollto" href="#specials">Specials</a></li>
+          <li><a class="nav-link scrollto" href="#specials">Promoções</a></li>
           <li><a class="nav-link scrollto" href="#events">Eventos</a></li>
-          <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>
+        
           <li><a class="nav-link scrollto" href="#gallery">Galeria</a></li>    
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
@@ -112,6 +112,89 @@
       </div>
     </div>
   </section><!-- End Hero -->
+
+
+<!-- About -->
+<section class="py-5 text-center" id="About">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="info-book mb-4">
+          <h2 class="display-4 text-primary">Why This Book?</h2>
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, veniam, voluptate! Beatae magni, impedit distinctio.</p>
+        </div>
+      <!-- Accordion -->
+        <div class="" id="accordion" role="tablist">
+            <div class="card container menu section-bg"  data-aos="fade-up">
+              <div class="card-header" role="tab">
+                <h5 class="mb-0">
+                  <div data-toggle="collapse" href="#collapse1">
+                    <i class="fa fa-arrow-circle-down"></i> Get Inspired
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse1" class="collapse show" data-parent="#accordion">
+                <div class="card-body">
+
+                  <div class="col-lg-12 menu-item filter-starters">
+                    <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
+                    <div class="menu-content">
+                      <a href="#">Lobster Bisque</a><span>$5.95</span>
+                    </div>
+                    <div class="menu-ingredients">
+                      Lorem, deren, trataro, filede, nerada
+                    </div>
+                  </div>
+
+                  <div class="col-lg-12 menu-item filter-starters">
+                    <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
+                    <div class="menu-content">
+                      <a href="#">Lobster Bisque</a><span>$5.95</span>
+                    </div>
+                    <div class="menu-ingredients">
+                      Lorem, deren, trataro, filede, nerada
+                    </div>
+                  </div>
+                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur consectetur accusantium, molestias quos, distinctio, labore assumenda repellendus, beatae adipisci fuga explicabo iure quia. Facilis ratione, aut, impedit id rerum voluptate?</p>
+                </div>
+              </div>
+            </div>
+            <div class="card" role="tablist">
+              <div class="card-header" role="tab">
+                <h5 class="mb-0">
+                  <div data-toggle="collapse" href="#collapse2">
+                    <i class="fa fa-arrow-circle-down"></i> Get Inspired
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse2" class="collapse" data-parent="#accordion">
+                <div class="card-body">
+                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur consectetur accusantium, molestias quos, distinctio, labore assumenda repellendus, beatae adipisci fuga explicabo iure quia. Facilis ratione, aut, impedit id rerum voluptate?</p>
+                </div>
+              </div>
+            </div>
+            <div class="card" role="tablist">
+              <div class="card-header" role="tab">
+                <h5 class="mb-0">
+                  <div data-toggle="collapse" href="#collapse3">
+                    <i class="fa fa-arrow-circle-down"></i> Open Your Mind
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse3" class="collapse" data-parent="#accordion">
+                <div class="card-body">
+                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur consectetur accusantium, molestias quos, distinctio, labore assumenda repellendus, beatae adipisci fuga explicabo iure quia. Facilis ratione, aut, impedit id rerum voluptate?</p>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 
   <section id="menu" class="menu section-bg">
 
@@ -550,8 +633,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Specials</h2>
-          <p>Check Our Specials</p>
+          <h2>Promoções</h2>
+          <p>Aproveite nossas promoções</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -883,8 +966,8 @@
 
       <div class="container" data-aos="fade-up">
         <div class="section-title">
-          <h2>Gallery</h2>
-          <p>Some photos from Our Restaurant</p>
+          <h2>Galeria</h2>
+          <p>Algumas de nossas fotos</p>
         </div>
       </div>
 
@@ -962,7 +1045,7 @@
     </section><!-- End Gallery Section -->
 
     <!-- ======= Chefs Section ======= -->
-    <section id="chefs" class="chefs">
+    <!-- <section id="chefs" class="chefs">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -1029,15 +1112,15 @@
         </div>
 
       </div>
-    </section><!-- End Chefs Section -->
+    </section> --><!-- End Chefs Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Contact Us</p>
+          <h2>Contato</h2>
+          <p>Entre em contato</p>
         </div>
       </div>
 
@@ -1178,14 +1261,15 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Restaurantly</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Pizzas Di Maria</span></strong>. Todos os Direitos Reservados
       </div>
       <div class="credits">
+        Desenvolvido por <a>OpenWebsites</a> <br>
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed por <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End Footer -->
