link de imagens com http nao seguro

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
             <!-- Tab panes -->
             <div class="tab-content">
-                <div role="tabpanel" class="tab-pane fade active show" id="breakfast">
+                <div role="tabpanel" class="tab-pane fade active show" id="bacon">
                     <div class="row">
                         <div class="col-md-6 mb20">
                             <article class="media">
@@ -157,7 +157,7 @@
                                <article class="media">
                                 <!-- Article Image -->
                                 <a class="g-width-100" href="#">
-                                    <img class="img-fluid mr-4" width="80" src="http://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food2.jpg" alt="Menu title">
+                                    <img class="img-fluid mr-4" width="80" src="https://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food2.jpg" alt="Menu title">
                                 </a>
                                 <!--Image -->
                                 <!--Content -->
@@ -177,7 +177,7 @@
                                <article class="media">
                                 <!-- Article Image -->
                                 <a class="g-width-100" href="#">
-                                    <img class="img-fluid mr-4" width="80" src="http://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food3.jpg" alt="Menu title">
+                                    <img class="img-fluid mr-4" width="80" src="https://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food3.jpg" alt="Menu title">
                                 </a>
                                 <!--Image -->
                                 <!--Content -->
@@ -197,7 +197,7 @@
                                <article class="media">
                                 <!-- Article Image -->
                                 <a class="g-width-100" href="#">
-                                    <img class="img-fluid mr-4" width="80" src="http://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food4.jpg" alt="Menu title">
+                                    <img class="img-fluid mr-4" width="80" src="https://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food4.jpg" alt="Menu title">
                                 </a>
                                 <!--Image -->
                                 <!--Content -->
@@ -217,7 +217,7 @@
                                <article class="media">
                                 <!-- Article Image -->
                                 <a class="g-width-100" href="#">
-                                    <img class="img-fluid mr-4" width="80" src="http://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food5.jpg" alt="Menu title">
+                                    <img class="img-fluid mr-4" width="80" src="https://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food5.jpg" alt="Menu title">
                                 </a>
                                 <!--Image -->
                                 <!--Content -->
@@ -239,7 +239,7 @@
                             <article class="media">
                                 <!-- Article Image -->
                                 <a class="g-width-100" href="#">
-                                    <img class="img-fluid mr-4" width="80" src="http://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food6.jpg" alt="Menu title">
+                                    <img class="img-fluid mr-4" width="80" src="https://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food6.jpg" alt="Menu title">
                                 </a>
                                 <!--Image -->
                                 <!--Content -->
@@ -259,7 +259,7 @@
                                <article class="media">
                                 <!-- Article Image -->
                                 <a class="g-width-100" href="#">
-                                    <img class="img-fluid mr-4" width="80" src="http://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food7.jpg" alt="Menu title">
+                                    <img class="img-fluid mr-4" width="80" src="https://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food7.jpg" alt="Menu title">
                                 </a>
                                 <!--Image -->
                                 <!--Content -->
@@ -279,7 +279,7 @@
                                <article class="media">
                                 <!-- Article Image -->
                                 <a class="g-width-100" href="#">
-                                    <img class="img-fluid mr-4" width="80" src="http://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food8.jpg" alt="Menu title">
+                                    <img class="img-fluid mr-4" width="80" src="https://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food8.jpg" alt="Menu title">
                                 </a>
                                 <!--Image -->
                                 <!--Content -->
