--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
 
           <h1>Bem Vindos(as) à <br><span>Pizzas Di Maria</span></h1>
-          <h2>Pizzas com qualidade feitas com carinho!</h2>
+          <h2>Cada fatia, um pedaço de amor e dedicação!</h2>
 
           <div class="btns">
             <!-- <a href="#menu" class="btn-menu animated fadeInUp scrollto">Nosso Cardápio</a> -->
@@ -460,7 +460,7 @@
                                <article class="media">
                                 <!-- Article Image -->
 
-                                
+
                                 <a class="g-width-100" href="#">
                                     <img class="img-fluid mr-4" width="80" src="http://bootstraplovers.com/assan-kit-3.8/bootstrap4/website-templates/classic-template/html/images/resto/food4.jpg" alt="Menu title">
                                 </a>
