link para cardapio

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Início</a></li>
           <li><a class="nav-link scrollto" href="#about">Sobre</a></li>
-          <li><a class="nav-link scrollto" href="#menu">Cardápio</a></li>
+          <li><a class="nav-link scrollto" href="#bacon">Cardápio</a></li>
           <li><a class="nav-link scrollto" href="#specials">Promoções</a></li>
           <li><a class="nav-link scrollto" href="#events">Eventos</a></li>
         
@@ -113,8 +113,7 @@
     </div>
   </section><!-- End Hero -->
 
-
-  <div class="menu section-bg " data-aos="fade-up">
+  <div id="cardapio"class="menu section-bg " data-aos="fade-up"></div>
     <div class="section-title text-center">
       <p>Veja o nosso cardápio</p>
     </div>
@@ -139,7 +138,7 @@
                         <div class="col-md-6 mb20">
                             <article class="media">
                                 <!-- Article Image -->
-                                <a class="g-width-100" href="#">
+                                <a class="g-width-100">
                                     <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-bacon.jpg" alt="Menu title">
                                 </a>
                                 
@@ -570,6 +569,7 @@
         </div>
     </div>
 </div>
+
 
 
 
