--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
           <div class="btns">
             <!-- <a href="#menu" class="btn-menu animated fadeInUp scrollto">Nosso Cardápio</a> -->
-            <a href="tel:19971542369" class="btn-book animated fadeInUp scrollto">Peça pelo telefone</a>
+            <a href="tel:19971542369" class="btn-book animated fadeInUp scrollto">Peça pelo telefone</a><br><br>
             <a href="https://api.whatsapp.com/send?phone=5519971542369&text=Quero%20uma%20pizza" class="btn-book 
             animated fadeInUp scrollto">Peça pelo WhatsApp</a>
             
