--- a/index.html
+++ b/index.html
@@ -1283,7 +1283,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form name="Contato" method="post" role="form" netlify>
+            <form role="form" id="contactForm1" name="sentMessage" method="POST" novalidate="novalidate" netlify>
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" required>
