--- a/index.html
+++ b/index.html
@@ -1283,7 +1283,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form name="sentMessage" method="POST" role="form" class="php-email-form" novalidate="novalidate" netlify>
+            <form name="Contato" method="POST" role="form" class="php-email-form" netlify>
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" required>
@@ -1297,6 +1297,11 @@
               </div>
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="8" placeholder="Mensagem" required></textarea>
+              </div>
+              <div class="my-3">
+                <div class="loading">Carregando</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Sua mensagem foi enviada. Obrigada!</div>
               </div>
               <div class="text-center"><button type="submit">Enviar mensagem</button></div>
             </form>
