--- a/index.html
+++ b/index.html
@@ -1293,10 +1293,10 @@
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" required>
+                <input type="text" class="form-control" name="assunto" id="subject" placeholder="Assunto" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="8" placeholder="Mensagem" required></textarea>
+                <textarea class="form-control" name="mensagem" rows="8" placeholder="Mensagem" required></textarea>
               </div>
               
               <div class="text-center"><button type="submit">Enviar mensagem</button></div>
