--- a/index.html
+++ b/index.html
@@ -1283,10 +1283,10 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form id="contactForm1" name="sentMessage" method="POST" novalidate="novalidate" netlify>
+            <form id="contactForm1" name="contato" method="POST" novalidate="novalidate" netlify>
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" required>
+                  <input type="text" name="nome" class="form-control" id="name" placeholder="Seu nome" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
                   <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" required>
