--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </section><!-- End Hero -->
 
   <div id="cardapio" pclass="menu section-bg " data-aos="fade-up"></div>
-    <div class="section-title text-center">
+    <div class="section-title mt-5 text-center">
       <p>Veja o nosso cardápio</p>
     </div>
     <div class="food-menu-card">
@@ -673,6 +673,10 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <!-- <h2>Why Us</h2> -->
+          <p>Sobre Pizzas Di Maria</p>
+        </div>
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
@@ -707,8 +711,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Why Us</h2>
-          <p>Why Choose Our Restaurant</p>
+          <p>Porque escolher nossa Pizzaria</p>
         </div>
 
         <div class="row">
@@ -745,7 +748,7 @@
     
 
     <!-- ======= Specials Section ======= -->
-    <section id="specials" class="specials">
+    <!-- <section id="specials" class="specials">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -840,7 +843,7 @@
         </div>
 
       </div>
-    </section><!-- End Specials Section -->
+    </section> --><!-- End Specials Section -->
 
     <!-- ======= Events Section ======= -->
     <section id="events" class="events">
@@ -1322,13 +1325,13 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-6 col-md-6">
             <div class="footer-info">
-              <h3>Restaurantly</h3>
+              <h3>Pizzas Di Maria</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
+                Av. Três, 327, 13550-000 <br>
+                Analândia - SP - BR<br><br>
+                <strong>TEL:</strong> 19 971542369<br>
                 <strong>Email:</strong> info@example.com<br>
               </p>
               <div class="social-links mt-3">
@@ -1341,7 +1344,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
+          <!-- <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
@@ -1361,13 +1364,13 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
-          </div>
+          </div> -->
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+          <div class="col-lg-6 col-md-6 footer-newsletter">
+            <h4>Receba nossas novidades</h4>
+            <p>Deixe seu email e lhe enviaremos todas as novidades e promoções semanais</p>
             <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+              <input type="email" name="email"><input type="submit" value="Inscrever">
             </form>
 
           </div>
