--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Início</a></li>
           <li><a class="nav-link scrollto" href="#cardapio">Cardápio</a></li>
           <li><a class="nav-link scrollto" href="#about">Sobre</a></li>
+          <li><a class="nav-link scrollto" href="#book-a-table">Reservas</a></li>
           <li><a class="nav-link scrollto" href="#promocoes">Promoções</a></li>
           <!-- <li><a class="nav-link scrollto" href="#events">Eventos</a></li> -->
         
@@ -115,7 +116,7 @@
 
   <div id="cardapio" pclass="menu section-bg " data-aos="fade-up"></div>
     <div class="section-title mt-5 text-center">
-      <p>Veja o nosso cardápio</p>
+      <p>Cardápio</p>
     </div>
     <div class="food-menu-card">
         <div>
@@ -1573,7 +1574,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <!-- <h2>Why Us</h2> -->
-          <p>Sobre Pizzas Di Maria</p>
+          <p>Sobre Nós</p>
         </div>
 
         <div class="row">
@@ -1617,24 +1618,24 @@
           <div class="col-lg-4">
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
               <span>01</span>
-              <h4>Lorem Ipsum</h4>
-              <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+              <h4>Produtos de Qualidade</h4>
+              <p>As nossas pizzas são feitas com produtos de originais e de qualidade</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="200">
               <span>02</span>
-              <h4>Repellat Nihil</h4>
-              <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
+              <h4>Atendimento Agilizado</h4>
+              <p>Presteza e agilidade no atendimento estão entre nossas prioridades</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="300">
               <span>03</span>
-              <h4> Ad ad velit qui</h4>
-              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+              <h4>Medidas de Saúde</h4>
+              <p>Tomamos todas as cuidados necessárias para a prevenção da covid</p>
             </div>
           </div>
 
@@ -1895,12 +1896,12 @@
     </section><!-- End Book A Table Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+    <!-- <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Testimonials</h2>
-          <p>What they're saying about us</p>
+          <h2>Depoimentos</h2>
+          <p>O que falam sobre nós</p>
         </div>
 
         <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
@@ -1917,9 +1918,9 @@
                 <h3>Saul Goodman</h3>
                 <h4>Ceo &amp; Founder</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div> --><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -1930,9 +1931,9 @@
                 <h3>Sara Wilsson</h3>
                 <h4>Designer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div> --><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -1943,9 +1944,9 @@
                 <h3>Jena Karlis</h3>
                 <h4>Store Owner</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div> --><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -1956,9 +1957,9 @@
                 <h3>Matt Brandon</h3>
                 <h4>Freelancer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div> --><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -1969,14 +1970,14 @@
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div> --><!-- End testimonial item -->
 
-          </div>
+          <!-- </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section> --><!-- End Testimonials Section -->
 
     <!-- ======= Gallery Section ======= -->
     <section id="gallery" class="gallery">
@@ -2141,10 +2142,6 @@
         </div>
       </div>
 
-      <div data-aos="fade-up">
-         <iframe style="border:0; width: 100%; height: 350px;" src="https://maps.google.com/maps?q=Avenida%203%20Numero%20327%20analandia&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" allowfullscreen></iframe>
-      </div>
-
       <div class="container" data-aos="fade-up">
 
         <div class="row mt-5">
@@ -2212,7 +2209,14 @@
 
         </div>
 
-      </div>
+      </div> 
+
+
+      <div data-aos="fade-up" class="mt-5"> 
+        <iframe style="border:0; width: 100%; height: 350px;" src="https://maps.google.com/maps?q=Avenida%203%20Numero%20327%20analandia&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" allowfullscreen></iframe>
+     </div>
+
+
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
